--- a/proto1.tex
+++ b/proto1.tex
@@ -139,13 +139,7 @@ unification.
   \label{fig:proto1-impl-arch}
 \end{figure}
 
-To start we need to define a abstract syntax for the \progLang{Prolog}-like language.
-There is a conflict between the type systems as discussed in Chapter~\ref{chap:relatedWork}.
-
-Since \progLang{Haskell} is statically typed we need to define a ``typed'' language which
-has a number of constructs representing different terms in \progLang{Prolog}, such as complex structures
-(for example predicates, clauses etc.), don't cares, cuts, variables and so on.
-
+To start we need to define an abstract syntax for a \progLang{Prolog}-like language.
 Consider the language in Listing~\ref{tab:closed-terms}, which has been adopted from
 \cite{prolog-lib}.
 
@@ -161,15 +155,6 @@ Consider the language in Listing~\ref{tab:closed-terms}, which has been adopted 
             | Wildcard
             | Cut Int
   deriving (Eq, Data, Typeable)
-  data Clause = Clause { lhs :: Term, rhs_ :: [Goal] }
-              | ClauseFn { lhs :: Term, fn :: [Term] -> [Goal] }
-  deriving (Data, Typeable)
-  type Program = [Sentence]
-  type Body    = [Goal]
-  data Sentence = Query   Body
-                | Command Body
-                | C Clause
-  deriving (Data, Typeable)
 \end{minted}
   \caption{A classic recursive grammar}
   \label{tab:closed-terms}
@@ -209,21 +194,10 @@ Consider the code in Listing~\ref{tab:non-recurse}.
 
 One result of coding as in Listing~\ref{tab:non-recurse} rather than as in Listing~\ref{tab:closed-terms} (lines
 6--9) is that the non-recursive type \texttt{FlatTerm} is modular and generic as the structure
-\haskellConstruct{FlatTerm} is separate from the type of its subterms\endnote{%
-  ``\textit{its type is \haskellConstruct{a}}'' seems wrong.
-  The type \haskellConstruct{a} seems associated with terms.
-  The type \haskellConstruct{FlatTerm} has kind \texttt{* -> *}\,.
-  \par
-  Is my correction ok?
-  \mehul{yes}
-}
+\haskellConstruct{FlatTerm} is separate from the type of its subterms
 which is \haskellVar{a}.
 The above language can be of any type \haskellConstruct{FlatTerm} \haskellVar{a} where \haskellVar{a} can be of any
-type at all.\endnote{%
-  Was
-  ``which is \macroName{haskellConstruct}{a}.
-  The above language can be of any type \macroName{textit}{a}''
-}
+type at all.
 A more accurate way of saying it would be that \haskellVar{a} can be any \textit{kind} in
 \progLang{Haskell}.
 
@@ -232,9 +206,7 @@ operator.
 A kind system is essentially a simply-typed \(\lambda\)-calculus `one level up', endowed with a primitive type,
 denoted \Verb!*!
 and called `type', which is the kind of any (monomorphic) data type
-(see \cite{website:kindhaskellwiki}).\endnote{%
-    I did not understand the ``\textit{for example\dots}''; is this right?
-}
+(see \cite{website:kindhaskellwiki}).
 Listing~\ref{tab:kindsinhaskell} describes kinds in \progLang{Haskell}.
 
 \begin{code-list}[H]
@@ -271,16 +243,11 @@ The approach to tackling this problem is to find the ``fixed-point'' of \haskell
 After infinitely many iterations we should get to a fixed point where further iterations make no
 difference.
 It means that applying one more \haskellConstruct{FlatTerm} would not change anything---%
-a\endnote{%
-  Note the correct use of an em-dash.
-} fixed point does not move under \haskellConstruct{FlatTerm}.
-
-\progLang{Haskell} provides fixed-points in two forms, one for data and one for types.
+a \progLang{Haskell} provides fixed-points in two forms, one for data and one for types.
 
 In type constructor form,
 \mint{haskell}|newtype Fix f = f (Fix f)|
 which we apply to our abstract syntax.
-
 
 The resulting language is of the form,\endnote{%
   There is a weird \TeX{} problem here jamming lines together.
@@ -297,10 +264,10 @@ A sample function working with such expressions would be of the form,
 
 Generically speaking, the language can be expanded for additional functionality without changing or modifying the
 base structure.
-Consider the scenario where the language needs to accommodate additional type of terms,
+Consider the scenario where the language needs to accommodate additional type of terms. There are two appraoches:
 
 \begin{enumerate}
-\item Manually modifying the structure of the language, as shown in Listing~\ref{tab:man-enhan-gram}
+\item Manually modify the structure of the language, as shown in Listing~\ref{tab:man-enhan-gram}.
   \begin{code-list}[H]
     \begin{minted}[linenos,gobble=5]{haskell}
       type Atom            = String
@@ -326,6 +293,10 @@ Consider the scenario where the language needs to accommodate additional type of
 \item
   The other option would be to \textit{functorize} language like we did by adding a type variable which can be used
   to plug something that provides the functionality into the language.
+  Since we needed the fixed point of the language we used \haskellConstruct{Fix} but generically one could add
+  custom functionality.
+  For instance, using \haskellConstruct{Extended} from Listing~\ref{tab:garfunkle} we have that
+  \haskellConstruct{Extended} \haskellConstruct{FlatTerm} is isomorphic to the type defined in Listing~\ref{tab:man-enhan-gram}.
 \begin{comment}  
   Consider the following example,
 
@@ -339,13 +310,7 @@ T (Struct 'atom' [Abox, T (Cut 0)])
 \end{minted}
 \end{comment}
 \end{enumerate}
-Since we needed the fixed point of the language we used \haskellConstruct{Fix} but generically one could add
-custom functionality.
-For instance, using \haskellConstruct{Extended} from Listing~\ref{tab:garfunkle} we have that
-  \haskellConstruct{Extended} \haskellConstruct{FlatTerm} is isomorphic to the type defined in Listing~\ref{tab:man-enhan-gram}.\endnote{%
-  I've tried to guess your sense here.
-  Something is mangled in the following \P{}, so i've coloured it for now..
-}
+
 
 
 \begin{code-list}[H]
@@ -354,18 +319,13 @@ For instance, using \haskellConstruct{Extended} from Listing~\ref{tab:garfunkle}
                      | New_Constructor_2 ....
                      | Base (f (Extended f))
   \end{minted}
-  \caption{garfunkle}
+  \caption{The \protect{\haskellConstruct{Extended}} type constructor}
   \label{tab:garfunkle}
 \end{code-list}
 
-
-\begin{scope}\color[rgb]{0.5,0.8,0.8}
-Figure~\ref{fig:manual-extension} Figure~\ref{fig:automatic-extension} show the extension of the example in Listing~\ref{tab:garfunkle}.
-Rather than modifying the the base language and the operation defined for it, we extend the language as shown in 
-Figure~\ref{fig:automatic-extension}. 
-
-\mint{haskell}|Extended FlatTerm| is isomorphically equivalent to the abstract grammar in Figure~\ref{fig:manual-extension}.
-\end{scope}
+Figure~\ref{fig:manual-extension} and Figure~\ref{fig:automatic-extension} show the extension of the example in Listing~\ref{tab:closed-terms} using the
+manual
+and functorized approach respectively.
 
 \begin{figure}[H]
   \centering
@@ -420,10 +380,8 @@ Figure~\ref{fig:Functor Hierarchy} shows the relation between the different clas
 \label{fig:Functor Hierarchy}
 \end{figure}
 
-The \haskellClass{Functor} and \haskellClass{Foldable} instances providing functions for applying map-reduce as described in Chapter~\ref{chap:relatedWork}.\endnote{%
-  ``\textit{The \Verb!Functor! and \Verb!Foldable! instances providing functions for applying map-reduce as
-    described in Chapter~\ref{chap:relatedWork}.}'' is not a sentence.
-
+The \haskellClass{Functor} and \haskellClass{Foldable} instances provide functions for applying map-reduce as described in Chapter~\ref{chap:relatedWork}.
+\endnote{%
   Also it is not clear that you are talking about the functional interface to \texttt{map-reduce} rather than the
   large-scale data capabilities.  Perhaps this can be cleared up in Chapter~\ref{chap:relatedWork}.
 }
@@ -434,12 +392,7 @@ variable with language values (language constructs).
 
 Enter \haskellConstruct{Traversable}.
 It allows reduce whilst preserving the shape of the structure.
-We create the necessary instances\endnote{%
-  I am deeply suspicious of the instance for \texttt{Applicative} given.
-
-  \mehul{I agree, I think I just created one for the purpose of the diagram.}
-  \mehul{delete?}
-}
+We create the necessary instances
 as shown in Listing~\ref{tab:flat-term-class-inst}.
 \begin{code-list}[H]
   \begin{singlespace}
@@ -471,15 +424,9 @@ This is shown in Figure~\ref{tab:zipMatch}.
   \label{tab:zipMatch}
 \end{code-list}
 
-\paragraph{Logic Variables}
 Unification involves side effects of binding logic variables to terms. To allow and keep track of these effects we use the binding monad
 which provides facilities to generate fresh logic variables and perform look ups on dictionaries. By default two logic variable
-implementations exist,\endnote{%
-  In this immediate region, I (dgc) removed text inserted by a failed push or pull merge.
-  Check to see that it is correct, or reverse commit \texttt{95804e3\dots}.
-	\mehul{looks ok, cannot remember exactly}
-}
-
+implementations exist:
 \begin{enumerate}
 \item The \haskellConstruct{IntVar} implementation uses \haskellConstruct{Int} as the names of variables, and uses an
   \haskellConstruct{IntMap} to keep track of the environment. 
