addressed notes and recap in proto2.tex.

--- a/proto2.tex
+++ b/proto2.tex
@@ -112,7 +112,7 @@ as a whole.
 
 
 
-\section{Steps involved / Procedure}
+\section{Procedure}
 
 
 \subsection{Flatten the language by introducing a type variable}
@@ -330,8 +330,8 @@ Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3unify}
 
 
 \section{Chapter recapitulation}
-Recapitulating, this chapter provides the details on a \progLang{Prolog} query resolver adapted to perform unification in a monadic way. 
-
+Recapitulating, this chapter provided an implementation of a \prologConstruct{Prolog}-like language adopted from \cite{prolog-lib} and
+incorporated a monadic unifier built from \cite{unification-fd-lib} to create a \progLang{Prolog} query resolver.
 
 \ifMain
 \begin{scope}
