--- a/hwh.tex
+++ b/hwh.tex
@@ -13,7 +13,13 @@
 \section{About this chapter}
 This chapter discusses \progLang{Haskell} as a functional language and its features which assist in embedding domain specific languages.
 
-\section{Functional languages}
+\section{Functional programming languages}
+Functional programming revolves around the concept of functions being applied to arguments to get results. In functional programming
+functions are first class citizens and a main program itself is defined in terms of
+other functions, which in turn are defined in terms of still more functions, until
+at the bottom level the functions are language primitives. Programs contain no
+assignment statements, so variables, once given a value, never change and hence contain no side-effects \cite{hughes1989functional}.
+
 
 \section{Embedded domain specific languages}
   Shifting a bit to embedded domain specific languages (eDSLs) such as \progLang{Emacs LISP}.
